# content-hub

content/response_integrations/google/amazon_macie/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/amazon_macie/actions/: CreateCustomDataIdentifier.py  CreateCustomDataIdentifier.yaml  DeleteCustomDataIdentifier.py  DeleteCustomDataIdentifier.yaml  DisableMacie.py  DisableMacie.yaml  EnableMacie.py  EnableMacie.yaml  GetFindings.py  GetFindings.yaml  ListFindings.py  ListFindings.yaml  Ping.py  Ping.yaml
content/response_integrations/google/amazon_macie/connectors/: AmazonMacieFindingsConnector.py  AmazonMacieFindingsConnector.yaml
content/response_integrations/google/amazon_macie/core/: AmazonMacieManager.py  AmazonMacieParser.py  consts.py  datamodels.py  exceptions.py  utils.py
content/response_integrations/google/amazon_macie/resources/: create_custom_data_identifier_JsonResult_example.json  get_findings_JsonResult_example.json  list_findings_JsonResult_example.json
content/response_integrations/google/amazon_macie/widgets/: CreateCustomDataIdentifier.html  CreateCustomDataIdentifier.yaml  GetFindings.html  GetFindings.yaml  ListFindings.html  ListFindings.yaml
content/response_integrations/google/anomali_staxx/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/anomali_staxx/actions/: Ping.py  Ping.yaml
content/response_integrations/google/anomali_staxx/connectors/: IndicatorsConnector.py  IndicatorsConnector.yaml
content/response_integrations/google/anomali_staxx/core/: AnomaliStaxxConstants.py  AnomaliStaxxExceptions.py  AnomaliStaxxManager.py  AnomaliStaxxParser.py  UtilsManager.py  datamodels.py
content/response_integrations/google/anomali_staxx/tests/: config.json
content/response_integrations/google/aws_cloud_trail/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/aws_cloud_trail/actions/: Ping.py  Ping.yaml
content/response_integrations/google/aws_cloud_trail/connectors/: AWSCloudTrailInsightsConnector.py  AWSCloudTrailInsightsConnector.yaml
content/response_integrations/google/aws_cloud_trail/core/: AWSCloudTrailManager.py  AWSCloudTrailParser.py  UtilsManager.py  consts.py  datamodels.py  exceptions.py
content/response_integrations/google/aws_cloud_watch/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/aws_cloud_watch/actions/: CreateLogGroup.py  CreateLogGroup.yaml  CreateLogStream.py  CreateLogStream.yaml  DeleteLogGroup.py  DeleteLogGroup.yaml  DeleteLogStream.py  DeleteLogStream.yaml  ListLogGroups.py  ListLogGroups.yaml  ListLogStreams.py  ListLogStreams.yaml  Ping.py  Ping.yaml  RemoveRetentionPolicy.py  RemoveRetentionPolicy.yaml  SearchLogEvents.py  SearchLogEvents.yaml  SetRetentionPolicy.py  SetRetentionPolicy.yaml
content/response_integrations/google/aws_cloud_watch/core/: AWSCloudWatchManager.py  consts.py  (+4 more)
content/response_integrations/google/aws_security_hub/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/awss3/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/bmc_remedy_itsm/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/check_point_firewall/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/check_point_threat_reputation/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cloud_identity/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cofense_triage/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cuckoo/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cybereason/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cylance/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/f5_bigip_access_policy_manager/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/fortigate/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/fortinet_forti_siem/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/google_alert_center/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/google_cloud_storage/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/humio/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/iron_scales/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/mc_afee_tiedxl/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/nozomi_networks/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/office365_cloud_app_security/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/phishing_initiative/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/rsa_archer/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/sumo_logic_cloud_siem/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/symantec_blue_coat_proxy_sg/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/trend_micro_apex_central/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/trend_micro_cloud_app_security/: definition.yaml  pyproject.toml  release_notes.yaml
(+4876 files in other folders)
