[project]
name = "CloudIdentity"
version = "1.0"
description = "A unified identity, access, app, and endpoint management (IAM/EMM) platform."
requires-python = ">=3.11,<3.12"
dependencies = [
    "dataclass-wizard==0.39.1",
    "google-auth==2.47.0",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "tipcommon>=2.3.8",
    "urllib3==2.2.3",
]

[tool.uv.sources]
tipcommon = { path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.8-py3-none-any.whl" }
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.8-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "integration-testing",
    "pytest>=9.0.2",
    "pytest-json-report>=1.5.0",
    "soar-sdk",
]
