# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "F5BIGIPAccessPolicyManager"
version = "8.0"
description = "BIG-IP® Access Policy Manager® (APM) is a flexible, high-performance, centralized access management and security solution that delivers contextual, unified global access to your applications and network as well as to the Internet. It converges and consolidates remote, LAN, and web access and wireless access within a single management interface, while also enabling the quick creation of easy-to-manage, context-based access policies. As a result, BIG-IP APM helps you free up valuable IT resources, ensure the security of your applications and network, and scale quickly and cost-effectively."
requires-python = ">=3.11,<3.12"
dependencies = [ "pycryptodome==3.20.0", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
