# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "GoogleCloudStorage"
version = "15.0"
description = "Google Cloud Storage is a flexible cloud storage product with several options for the way you can manage and store your data. It offers globally unified, scalable, and highly durable object storage. This means customers of all sizes and industries can use it to store and protect any amount of data for a range of use cases."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "google==3.0.0", "google-api-core==2.19.1", "google-api-python-client==2.128.0", "google-auth==2.34.0", "google-auth-httplib2==0.2.0", "google-cloud-core==2.4.1", "google-cloud-storage==2.18.2", "google-resumable-media==2.7.2", "googleapis-common-protos==1.63.2", "httplib2==0.22.0", "pyOpenSSL>=24.2.1", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.1.6.1-py2.py3-none-any.whl"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.1-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
