# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "PhishingInitiative"
version = "13.0"
description = "Phishing Initiative allows any Internet user to help fight against phishing attacks. When reporting the address of a suspected phishing website, they will analyze it and have it blocked in the participating Web browsers. By contributing to this project you decrease the impact of cybercrime and prevent others from becoming victims of online fraud. Using this integration in Google SecOps gives you the ability to enrich your URLs with relevant information from Phishing Initative."
requires-python = ">=3.11,<3.12"
dependencies = [ "requests==2.32.5"]

[dependency-groups]
dev = [
 "environmentcommon",
 "integration-testing",
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
 "tipcommon"]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.3.8-py3-none-any.whl" }

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.8-py3-none-any.whl"
